packages/jsii/test/negatives/neg.mutable-datatype.ts
export interface DataType {
  readonly okay: string;
  notOkay: number; // properties should be "readonly"
}
